# 7zip-linux

./: .gitignore  Cargo.toml  README.md
data/: 7zip-linux.desktop
data/scripts/: create-archive.sh  extract-here.sh  extract-to.sh
src/: clipboard.rs  main.rs
src/archive/: browse.rs  creator.rs  extractor.rs  lister.rs  mod.rs  tester.rs
src/config/: bookmarks.rs  mod.rs  settings.rs
src/dialogs/: create_archive.rs  extract_archive.rs  mod.rs  progress.rs  properties.rs  settings.rs
src/models/: file_item.rs
src/operations/: copy.rs  delete.rs  mkdir.rs  mod.rs  move_move.rs
src/panels/: mod.rs  origmod.rs
src/utils/: format.rs  icons.rs  mod.rs
